# rray

./: Cargo.toml  README.md
gray/: .gitignore  Cargo.toml  README.md
gray/src/: camera.rs  main.rs  shader.frag  shader.vert  state.rs  uniform.rs  vertex.rs
src/: camera.rs  hitable.rs  main.rs  material.rs  ray.rs  renderer.rs  sphere.rs
