[package]
name = "rray"
version = "0.1.0"
authors = ["Paul Colusso <paulcolusso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log = "0.4.14"
minifb = "0.19.2"
nalgebra-glm = "0.11"
pretty_env_logger = "0.4.0"
rayon = "1.5.0"
rand = "0.8.3"
