[package]
name = "wgpu-test"
version = "0.1.0"
authors = ["Paul Colusso <paulcolusso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
winit = "0.24.0"
nalgebra-glm = "0.11.0"
pretty_env_logger = "0.4.0"
wgpu = "0.7.0"
log = "0.4.14"
futures = "0.3.13"
bytemuck = { version = "1.4", features = [ "derive" ] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"